<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="993dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/des"
                    android:inputType="text" />


                <EditText
                    android:id="@+id/height1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/height"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/width1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/width"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/lenght1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/lenght"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/weight1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/delivery_address1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/add"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/source_address1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/source"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/delivery_date1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/date"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/delivery_time1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/time"
                    android:inputType="time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/delivery_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/upd" />

                    <Button
                        android:id="@+id/delivery_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/del" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>