<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="645dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/des1"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/email_lg"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/pwd"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/phone"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/address"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/img"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/user_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/upd"
                    app:backgroundTint="@android:color/holo_blue_dark" />

                <Button
                    android:id="@+id/user_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/del"
                    app:backgroundTint="@android:color/holo_red_dark" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>