<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.DeliveryFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1089dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/des"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/des"
                    android:inputType="text" />


                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/height"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/width"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/width"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/lenght"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/lenght"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/add"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/source_address"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/source"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/delivery_date"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/date"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/delivery_time"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/time"
                    android:inputType="time" />


                <Button
                    android:id="@+id/add_delivery"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:gravity="center"
                    android:text="@string/ADD"
                    app:backgroundTint="@android:color/holo_blue_light" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:gravity="center"
                    android:text="@string/cancel"
                    app:backgroundTint="@android:color/holo_green_dark" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foregroundGravity="center"
                    app:backgroundTint="@android:color/holo_blue_light"
                    app:srcCompat="@android:drawable/ic_menu_revert" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>