<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.ForgetPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rseset"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@android:color/holo_blue_light"
            android:ems="10"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_fgt"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/send"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/send"
            app:backgroundTint="@android:color/holo_green_dark" />


    </LinearLayout>


</LinearLayout>