<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/holo_blue_light"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="162dp"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="216dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/del_des"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/des"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/del_date"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/del_address"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>